syntax = "proto3";

package worker;
option go_package = "github.com/pavandhadge/vectron/worker/proto/worker";

// The worker service definition.
service Worker {
  // Vector operations
  rpc StoreVector(StoreVectorRequest) returns (StoreVectorResponse) {}
  rpc GetVector(GetVectorRequest) returns (GetVectorResponse) {}
  rpc DeleteVector(DeleteVectorRequest) returns (DeleteVectorResponse) {}
  rpc Search(SearchRequest) returns (SearchResponse) {}

  // Key-value operations
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}

  // Control/Admin operations
  rpc Status(StatusRequest) returns (StatusResponse) {}
  rpc Flush(FlushRequest) returns (FlushResponse) {}
}

// Vector messages
message Vector {
  string id = 1;
  repeated float vector = 2;
  bytes metadata = 3;
}

message StoreVectorRequest {
  Vector vector = 1;
}

message StoreVectorResponse {}

message GetVectorRequest {
  string id = 1;
}

message GetVectorResponse {
  Vector vector = 1;
}

message DeleteVectorRequest {
  string id = 1;
}

message DeleteVectorResponse {}

message SearchRequest {
  repeated float vector = 1;
  int32 k = 2;
  bool brute_force = 3;
}

message SearchResponse {
  repeated string ids = 1;
}

// Key-value messages
message KeyValuePair {
  bytes key = 1;
  bytes value = 2;
}

message PutRequest {
  KeyValuePair kv = 1;
}

message PutResponse {}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  KeyValuePair kv = 1;
}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {}

// Control/Admin messages
message StatusRequest {}

message StatusResponse {
  string status = 1;
}

message FlushRequest {}

message FlushResponse {}
